--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -96,3 +96,9 @@ Bosh::Clouds::VMCreationFailed
 This error is raised if OpenStack is unable to create a VM. That may happen because:
 
 - not enough resources (vCPUs, RAM, disk) to run the VM. For example if you have selected `m1.xlarge` flavor that uses 10 vCPUs and you have 4 hypervisors and each one of them only has 3 vCPUs available, OpenStack is unable to start the VM anywhere even though, total vCPUs across all hypervisors is more than enough.
+
+```
+Image `4c1d6840-6ac7-4b42-bf29-c95fef6d986e' not found
+```
+
+It's possible that image was deleted from OpenStack directly and BOSH is not aware of it. You can recover with `bosh upload stemcell X --fix` to reupload the stemcell.
