--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -256,6 +256,7 @@ You must create and configure two Security Groups to restrict incoming network t
         <th><b>Remote</b></th>
       </tr>
       <tr><td>Ingress</td><td>IPv4</td><td>TCP</td><td>1-65535</td><td>bosh</td></tr>
+      <tr><td>Ingress</td><td>IPv4</td><td>TCP</td><td>25555</td><td>0.0.0.0/0 (CIDR)</td></tr>
       <tr><td>Ingress</td><td>IPv4</td><td>TCP</td><td>6868</td><td>0.0.0.0/0 (CIDR)</td></tr>
       <tr><td>Ingress</td><td>IPv4</td><td>TCP</td><td>22</td><td>0.0.0.0/0 (CIDR)</td></tr>
       <tr><td>Egress</td><td>IPv4</td><td>Any</td><td>-</td><td>0.0.0.0/0 (CIDR)</td></tr>
