--- a/director-users-uaa.html.md.erb
+++ b/director-users-uaa.html.md.erb
@@ -45,7 +45,7 @@ All UAA users can log into the Director; however, their actions will be limited 
 
 All users (even users without any of the above scopes) can use:
 
-- `bosh status`: show general infromation about targetted Director (authentication is not required)
+- `bosh status`: show general information about targeted Director (authentication is not required)
 
 Users with read access can use following CLI commands:
 
