correct key paths
Signed-off-by: Marco Voelz <marco.voelz@sap.com>

--- a/director-certs.html.md.erb
+++ b/director-certs.html.md.erb
@@ -73,13 +73,13 @@ ls -la .
 If you are using the UAA for user management, additionally put certificates in these properties:
 
 - `uaa.sslPrivateKey`
-    - Private key for the UAA (e.g. `certs/uaa.key`)
+    - Private key for the UAA (e.g. `certs/uaa-web.key`)
 - `uaa.sslCertificate`
-    - Associated certificate for the UAA (e.g. `certs/uaa.crt`)
+    - Associated certificate for the UAA (e.g. `certs/uaa-web.crt`)
 - `login.saml.serviceProviderKey`
-    - Private key for the UAA (e.g. `certs/uaa.key`)
+    - Private key for the UAA (e.g. `certs/uaa-sp.key`)
 - `login.saml.serviceProviderCertificate`
-    - Associated certificate for the UAA (e.g. `certs/uaa.crt`)
+    - Associated certificate for the UAA (e.g. `certs/uaa-sp.crt`)
 
 ---
 ## Target the Director
