--- a/tips.html.md.erb
+++ b/tips.html.md.erb
@@ -20,3 +20,18 @@ irb(main):001:0> Bosh::Director::Models::RenderedTemplatesArchive.count
 </pre>
 
 <p class="note">Note: It's not recommended to modify the Director database via this or other manual methods. Please let us know via GitHub issue if you need a certain feature in the BOSH CLI to do some operation.</p>
+
+## Task X cancelled
+
+```
+...
+
+  Started preparing package compilation > Finding packages to compile. Done (00:00:01)
+  Started preparing dns > Binding DNS. Done (00:00:05)
+
+Error 10001: Task 106 cancelled
+
+Task 106 cancelled
+```
+
+This problem typically occurs if the Director's system time is out of sync, or if the Director machine is underpowered.
