--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -43,6 +43,7 @@ title: Index
     * [UAA Integration](director-users-uaa.html)
  * [Configuring External Database](director-configure-db.html)
  * [Configuring External Blobstore](director-configure-blobstore.html)
+ * [Troubleshooting](tips.html)
 
 ---
 ## <a id="basic-deploy"></a> Using BOSH to deploy software
