--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -87,6 +87,40 @@ disk_pools:
 ```
 
 ---
+## <a id='global'></a> Global Configuration
+
+See [CPI job configuration](https://bosh.io/jobs/cpi?source=github.com/cloudfoundry-incubator/bosh-openstack-cpi-release) for details.
+
+Example with Keystone V2:
+
+```yaml
+properties:
+  openstack:
+    auth_url: http://pistoncloud.com:5000/v2.0
+    username: christopher
+    api_key: QRoqsenPsNGX6
+    tenant: Bosh
+    region: RegionOne
+    default_key_name: bosh
+    default_security_groups: [bosh]
+```
+
+Example with Keystone V3:
+
+```yaml
+properties:
+  openstack:
+    auth_url: http://pistoncloud.com:5000/v3
+    username: christopher
+    api_key: QRoqsenPsNGX6
+    project: Bosh
+    domain: sample-domain
+    region: RegionOne
+    default_key_name: bosh
+    default_security_groups: [bosh]
+```
+
+---
 ## <a id='errors'></a> Errors
 
 ```
