--- a/resurrector.html.md.erb
+++ b/resurrector.html.md.erb
@@ -71,7 +71,7 @@ To enable the Resurrector:
           client_secret: "hm-password"
     ```
 
-    ### Option b) Using Preconfigured Users
+    ### <a id="preconfigured-users"></a> Option b) Using Preconfigured Users
 
     Create new Director user so that the Resurrector plugin can communicate with the Director and query/submit information about deployments.
 
