--- a/director-tasks.html.md.erb
+++ b/director-tasks.html.md.erb
@@ -11,7 +11,7 @@ $ bosh deploy
 
 Deployment `idora-full-bosh'
 
-Director task 766 # <-----------------
+Director task 766 # <---
 
 ...snip...
 </pre>
@@ -87,16 +87,16 @@ To view recently finished tasks:
 <pre class="terminal extra-wide">
 $ bosh tasks recent
 
-+-----+-------+-------------------------+--------+--------------------------+------------------------------------------------------------------------------+
-| #   | State | Timestamp               | User   | Description              | Result                                                                       |
-+-----+-------+-------------------------+--------+--------------------------+------------------------------------------------------------------------------+
-| 768 | done  | 2015-01-27 21:39:30 UTC | admin  | run errand smoke-tests   | Errand `smoke-tests' completed successfully (exit code 0)                    |
-| 766 | done  | 2015-01-27 21:33:42 UTC | admin  | create deployment        | /deployments/mysql-dep                                                       |
-| 765 | error | 2015-01-27 21:27:48 UTC | admin  | create deployment        | Timed out pinging to 95206a0e-4dd9-4598-a074-2aee54793f0f after 600 seconds  |
-| 764 | done  | 2015-01-27 21:25:50 UTC | admin  | create stemcell          | /stemcells/bosh-aws-xen-ubuntu-trusty-go_agent/2827                          |
-| 760 | done  | 2015-01-27 21:25:01 UTC | admin  | create release           | Created release `cf-mysql/16'                                                |
-| 759 | error | 2015-01-27 21:23:43 UTC | admin  | create release           | No space left on device @ io_write -...                                      |
-+-----+-------+-------------------------+--------+--------------------------+------------------------------------------------------------------------------+
++-----+-------+-------------------------+--------+--------------------------+-----------------------------------------------------------+
+| #   | State | Timestamp               | User   | Description              | Result                                                    |
++-----+-------+-------------------------+--------+--------------------------+-----------------------------------------------------------+
+| 768 | done  | 2015-01-27 21:39:30 UTC | admin  | run errand smoke-tests   | Errand `smoke-tests' completed successfully (exit code 0) |
+| 766 | done  | 2015-01-27 21:33:42 UTC | admin  | create deployment        | /deployments/mysql-dep                                    |
+| 765 | error | 2015-01-27 21:27:48 UTC | admin  | create deployment        | Timed out pinging to 95206a0e-4dd9-4598-a074-2aee54793f0f |
+| 764 | done  | 2015-01-27 21:25:50 UTC | admin  | create stemcell          | /stemcells/bosh-aws-xen-ubuntu-trusty-go_agent/2827       |
+| 760 | done  | 2015-01-27 21:25:01 UTC | admin  | create release           | Created release `cf-mysql/16'                             |
+| 759 | error | 2015-01-27 21:23:43 UTC | admin  | create release           | No space left on device @ io_write -...                   |
++-----+-------+-------------------------+--------+--------------------------+-----------------------------------------------------------+
 
 Showing 30 recent tasks
 </pre>
