--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -13,9 +13,9 @@ title: Index
  * [Terminology](terminology.html)
 
 ---
-## <a id="install"></a> Installing BOSH
+## <a id="install"></a> Install BOSH
 
-### Installing BOSH with bosh-init
+### Install BOSH with bosh-init
 
  * [BOSH components](bosh-components.html)
  * [Bootstrapping an environment](init.html)
@@ -28,9 +28,9 @@ title: Index
  * [Install bosh-init](install-bosh-init.html)
  * [Using bosh-init](using-bosh-init.html)
     * [Migrating to bosh-init from the micro CLI plugin](migrate-to-bosh-init.html)
- * [Installing BOSH CLI](bosh-cli.html)
+ * [Install BOSH CLI](bosh-cli.html)
 
-### Installing BOSH with the micro CLI plugin **[deprecated, but supported]**
+### Install BOSH with the micro CLI plugin **[deprecated, but supported]**
 
  * [Bootstrapping an environment](bootstrap.html)
     * [On AWS](deploy-microbosh-to-aws.html)
