point to latest version of jobs

--- a/aws-cpi.html.md.erb
+++ b/aws-cpi.html.md.erb
@@ -118,7 +118,7 @@ Schema:
 * **default\_iam\_instance\_profile** [String, optional]: Name of the [IAM instance profile](aws-iam-instance-profiles.html) that will be applied to all created VMs. Example: `director`.
 * **region** [String, required]: AWS region name. Example: `us-east-1`
 
-See [all configuration options](https://bosh.io/jobs/cpi?source=github.com/cloudfoundry-incubator/bosh-aws-cpi-release&version=30).
+See [all configuration options](https://bosh.io/jobs/cpi?source=github.com/cloudfoundry-incubator/bosh-aws-cpi-release).
 
 Example with hard-coded credentials:
 
