--- a/director-configure-db.html.md.erb
+++ b/director-configure-db.html.md.erb
@@ -61,4 +61,4 @@ The Director is tested to be compatible with MySQL and Postgresql databases.
         # ...
     ```
 
-    See [director.db job configuration](https://bosh.io/jobs/director?source=github.com/cloudfoundry/bosh&version=208#p=director.db) for more details.
+    See [director.db job configuration](https://bosh.io/jobs/director?source=github.com/cloudfoundry/bosh#p=director.db) for more details.
