--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -75,6 +75,7 @@ title: Index
     * [OpenStack](openstack-cpi.html)
     * [vSphere](vsphere-cpi.html)
     * [vCloud](vcloud-cpi.html)
+    * [Azure](azure-cpi.html) **[beta]**
     * [Warden/Garden](warden-cpi.html)
 
 ### <a id="hm"></a> Health Management of VMs and Processes
