--- a/vm-anti-affinity.html.md.erb
+++ b/vm-anti-affinity.html.md.erb
@@ -52,14 +52,15 @@ If the vSphere CPI does not place the VMs on different hosts, check that you hav
 - Enabled a DRS rule and associated it with the appropriate VMs.
 - Given the DRS enough time to move the VMs to different hosts.
 
-<p class="note">
-  <strong>Notes</strong>:
+<div class="note">
+  Notes:
+
 	<ul>
 	  <li>The vSphere CPI currently only supports
 one DRS rule per BOSH resource pool.</li>
     <li>If a BOSH resource pool contains only one VM, the vSphere CPI does not create a DRS rule. After BOSH adds a second VM, the vSphere CPI will create and apply a DRS rule to all VMs in the BOSH resource pool.</li>
   </ul>
-</p>
+</div>
 
 ---
 ## <a id='openstack'></a> OpenStack Configuration
