always point to latest uaa

--- a/director-users-uaa.html.md.erb
+++ b/director-users-uaa.html.md.erb
@@ -67,7 +67,7 @@ In this configuration the Director is configured to delegate user management to 
         zones: {internal: {hostnames: []}}
     ```
 
-    To configure UAA to use LDAP, SAML, etc. see [uaa release job properties](http://bosh.io/jobs/uaa?source=github.com/cloudfoundry/uaa-release&version=1).
+    To configure UAA to use LDAP, SAML, etc. see [uaa release job properties](http://bosh.io/jobs/uaa?source=github.com/cloudfoundry/uaa-release).
 
 1. Configure the Director Postgres server to have an additional database called `uaa`:
 
