--- a/aws-iam-instance-profiles.html.md.erb
+++ b/aws-iam-instance-profiles.html.md.erb
@@ -2,7 +2,7 @@
 title: Using IAM Instance Profiles
 ---
 
-<p class="note">Note: This feature is available with bosh-release v208+ (1.3087.0) collocated with bosh-aws-cpi v31+.</p>
+<p class="note">Note: This feature is available with bosh-release v208+ (1.3087.0) colocated with bosh-aws-cpi v31+.</p>
 
 This topic describes how to configure BOSH to use [AWS IAM instance profiles](http://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-ec2.html) to avoid hard coding specific AWS credentials.
 
