--- a/resurrector.html.md.erb
+++ b/resurrector.html.md.erb
@@ -116,7 +116,7 @@ If your deployment consists of 1000 VMs, and you use the defaults, the Resurrect
 
 To disable the Resurrector:
 
-1. Change deployment manifest for the Health Monitor (typically collocated with the Director):
+1. Change deployment manifest for the Health Monitor (typically colocated with the Director):
 
     ```yaml
     properties:
