--- a/director-certs.html.md.erb
+++ b/director-certs.html.md.erb
@@ -42,7 +42,7 @@ EOL
   echo "Generating certificate signing request for ${ip}..."
   # golang requires to have SAN for the IP
   openssl req -new -nodes -key ${name}.key \
-    -out ${name}.csr
+    -out ${name}.csr \
     -subj "/C=US/O=BOSH/CN=${ip}"
 
   echo "Generating certificate ${ip}..."
