--- a/cpi-api-v1.html.md.erb
+++ b/cpi-api-v1.html.md.erb
@@ -311,7 +311,7 @@ No return value
 ---
 ## <a id="disk"></a> Disk management
 
-### `create_disk`
+### <a id="create-disk"></a> `create_disk`
 
 Creates disk with specific size. Disk does not belong to any given VM.
 
