--- a/cck.html.md.erb
+++ b/cck.html.md.erb
@@ -2,7 +2,7 @@
 title: Manual repair with Cloud Check
 ---
 
-<p class="note"><strong>Note</strong>: Updated for bosh-release v183 (1.3010.0).</p>
+<p class="note">Note: Updated for bosh-release v183 (1.3010.0).</p>
 
 BOSH provides the Cloud Check CLI command (a.k.a cck) to repair IaaS resources used by a specific deployment. It is not commonly used while normal operations; however, it becomes essential when some IaaS operations failed and the Director cannot resolve problems without a human decision or when the Resurrector is not enabled.
 
