--- a/pre-start.html.md.erb
+++ b/pre-start.html.md.erb
@@ -6,7 +6,7 @@ title: Pre-start Script
 
 <p class="note"><strong>Note</strong>: Releases that make use of pre-start scripts and are deployed on older stemcells or with an older Director may potentially deploy; however, pre-start script will not be called.</p>
 
-Release job can have a pre-start script that will run before the job is started. This script allows allow the job to prepare machine and/or persistent data before starting its operation. For example, when writing a release for Cassandra, each node will need to migrate format of SSTables. That procedure may be lenghty and should happen before the node can successfully start.
+Release job can have a pre-start script that will run before the job is started. This script allows the job to prepare machine and/or persistent data before starting its operation. For example, when writing a release for Cassandra, each node will need to migrate format of SSTables. That procedure may be lengthy and should happen before the node can successfully start.
 
 ## <a id="job-configuration"></a> Job Configuration
 
