rename cpi jobs
Signed-off-by: Marco Voelz <marco.voelz@sap.com>

--- a/init-aws.html.md.erb
+++ b/init-aws.html.md.erb
@@ -66,7 +66,7 @@ jobs:
   - {name: director, release: bosh}
   - {name: health_monitor, release: bosh}
   - {name: registry, release: bosh}
-  - {name: cpi, release: bosh-aws-cpi}
+  - {name: aws_cpi, release: bosh-aws-cpi}
 
   resource_pool: vms
   persistent_disk_pool: disks
@@ -117,7 +117,7 @@ jobs:
       address: 127.0.0.1
       name: my-bosh
       db: *db
-      cpi_job: cpi
+      cpi_job: aws_cpi
       max_threads: 10
       user_management:
         provider: local
@@ -142,7 +142,7 @@ jobs:
     ntp: &ntp [0.pool.ntp.org, 1.pool.ntp.org]
 
 cloud_provider:
-  template: {name: cpi, release: bosh-aws-cpi}
+  template: {name: aws_cpi, release: bosh-aws-cpi}
 
   ssh_tunnel:
     host: ELASTIC-IP # <--- Replace with your Elastic IP address
