--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -9,7 +9,7 @@ This topic describes cloud properties for different resources created by the Ope
 Schema for `cloud_properties` section used by dynamic network or manual network subnet:
 
 * **net_id** [String, required]: Subnet ID in which the instance will be created. Example: `net-b98ab66e-6fae-4c6a-81af-566e630d21d1`.
-* **security_groups** [Array, optional]: Array of security groups to apply for all VMs that are placed on this network. Defaults to security groups specified by `default_security_groups` in the global CPI settings.
+* **security_groups** [Array, optional]: Array of security groups to apply for all VMs that are placed on this network. Defaults to security groups specified by `default_security_groups` in the global CPI settings unless security groups are specified on a resource pool for a VM. Security groups can be specified either on a resource pool or on a network.
 
 Example of manual network:
 
@@ -50,6 +50,7 @@ Schema for `cloud_properties` section:
 
 * **instance_type** [String, required]: Type of the instance. Example: `m1.small`.
 * **availability_zone** [String, required]: Availability zone to use for creating instances. Example: `us-east-1a`.
+* **security_groups** [Array, optional]: Array of security groups to apply for all VMs that are in this resource pool. Defaults to security groups specified by `default_security_groups` in the global CPI settings unless security groups are specified on one of the VM networks. Security groups can be specified either on a resource pool or on a network.
 * **key_name** [String, optional]: Key pair name. Defaults to key pair name specified by `default_key_name` in the global CPI settings. Example: `bosh`.
 * **scheduler_hints** [Hash, optional]: Data passed to the OpenStack Filter scheduler to influence its decision where new VMs can be placed. See [VM Anti-Affinity](vm-anti-affinity.html#openstack) for a detailed example. Example: `{ group: af09abf2-2283... }`
 
@@ -65,6 +66,21 @@ resource_pools:
   cloud_properties:
     instance_type: m1.small
     availability_zone: us-east-1a
+```
+
+Example of a `m1.small` instance locked down by specific security groups:
+
+```yaml
+resource_pools:
+- name: web-workers
+  network: default
+  stemcell:
+    name: bosh-openstack-kvm-ubuntu-trusty-go_agent
+    version: latest
+  cloud_properties:
+    instance_type: m1.small
+    availability_zone: us-east-1a
+    security_groups: [web-workers]
 ```
 
 ---
